# GlintBar

./: .gitignore  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  away.html  detail.html  monitor.py  pyproject.toml  requirements-ci.in  requirements-ci.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  settings.html  start_glintbar.cmd  start_glintbar.vbs  ui.html
.github/workflows/: ci.yml  codeql.yml  publish.yml  scorecard.yml
docs/: index.html
glintbar/: __init__.py  __main__.py  away.html  detail.html  monitor.py  settings.html  ui.html
tests/: test_parsing.py
