[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "glintbar"
version = "1.0.4"
description = "A slim always-on-top hardware monitor that lives in the empty part of the Windows taskbar."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "paone9" }]
keywords = ["hardware-monitor", "taskbar", "windows", "gpu", "cpu", "temperature", "system-monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pywebview>=6.2.1",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
# Dev + CI tools, pinned to the tested versions (Dependabot bumps them). One
# dependency source for the whole project: `pip install .[dev]`, no separate
# requirements files.
dev = [
    "ruff==0.15.22",
    "bandit==1.9.4",
    "pytest==9.1.1",
]

[project.urls]
Homepage = "https://github.com/paone9/GlintBar"
Issues = "https://github.com/paone9/GlintBar/issues"

# gui-scripts (not scripts) so the installed `glintbar` command launches with
# pythonw on Windows: no stray console window.
[project.gui-scripts]
glintbar = "glintbar.monitor:main"

[tool.setuptools]
packages = ["glintbar"]

[tool.setuptools.package-data]
glintbar = ["*.html"]
